--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -10,48 +10,48 @@
         <i><img src="/images/default/settingArrowNext.svg"></i>
         <span>시설물 장애 이벤트</span>
     </h4>
-    <section class="inquiryContent">
-        <article class="search-form" id="searchForm">
+    <section class="inquiry_content">
+        <article class="search_form" id="searchForm">
             <h6>시설물 장애 이벤트 검색</h6>
             <form>
                 <div>
-                    <dl class="selectboxSet">
+                    <dl class="selectbox_set">
                         <dt>이벤트 종류</dt>
-                        <dd class="dropdown_checkbox">
-                            <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">이벤트 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list">
+                        <dd>
+                            <div class="dropdown_checkbox">
+                                <p class="checkbox_title checkbox_title_event">이벤트 종류 선택</p>
+                                <ul class="checkbox_list checkbox_list_event">
                                     <li>
-										<span>
-											<input type="checkbox" id="eventALL" name="">
-											<label for="eventALL"><span></span>전체</label>
-										</span>
+                                        <span>
+                                            <input type="checkbox" id="eventALL" name="">
+                                            <label for="eventALL"><span></span>전체</label>
+                                        </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="eventFind01" name="">
-											<label for="eventFind01"><span></span>GW 이상</label>
-										</span>
                                         <span>
-											<input type="checkbox" id="eventFind02" name="">
-											<label for="eventFind02"><span></span>ELB 차단</label>
-										</span>
+                                            <input type="checkbox" id="eventFind01" name="">
+                                            <label for="eventFind01"><span></span>GW 이상</label>
+                                        </span>
+                                        <span>
+                                            <input type="checkbox" id="eventFind02" name="">
+                                            <label for="eventFind02"><span></span>ELB 차단</label>
+                                        </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="eventFind03" name="">
-											<label for="eventFind03"><span></span>SMPS 이상</label>
-										</span>
                                         <span>
-											<input type="checkbox" id="eventFind04" name="">
-											<label for="eventFind04"><span></span>램프 이상</label>
-										</span>
+                                            <input type="checkbox" id="eventFind03" name="">
+                                            <label for="eventFind03"><span></span>SMPS 이상</label>
+                                        </span>
+                                        <span>
+                                            <input type="checkbox" id="eventFind04" name="">
+                                            <label for="eventFind04"><span></span>램프 이상</label>
+                                        </span>
                                     </li>
                                 </ul>
                             </div>
                         </dd>
                     </dl>
-                    <dl class="checkboxSet">
+                    <dl class="checkbox_set">
                         <dt>처리 상태</dt>
                         <dd>
 							<span>
@@ -70,120 +70,120 @@
                     </dl>
                 </div>
                 <div>
-                    <dl class="selectboxSet">
+                    <dl class="selectbox_set">
                         <dt>행정구역</dt>
-                        <dd class="dropdown_checkbox">
-                            <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list">
+                        <dd>
+                            <div class="dropdown_checkbox">
+                                <p class="checkbox_title checkbox_title_district">행정구역 선택</p>
+                                <ul class="checkbox_list checkbox_list_district">
                                     <li>
-										<span>
-											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
-											<label for="checkAll"><span></span>전체</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtALL" name="">
+                                                    <label for="districtALL"><span></span>전체</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind01" name="">
-											<label for="districtFind01"><span></span>광명1동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind01" name="">
+                                                    <label for="districtFind01"><span></span>광명1동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind02" name="">
-											<label for="districtFind02"><span></span>광명2동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind02" name="">
+                                                    <label for="districtFind02"><span></span>광명2동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind03" name="">
-											<label for="districtFind03"><span></span>광명3동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind03" name="">
+                                                    <label for="districtFind03"><span></span>광명3동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind04" name="">
-											<label for="districtFind04"><span></span>광명4동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind04" name="">
+                                                    <label for="districtFind04"><span></span>광명4동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind05" name="">
-											<label for="districtFind05"><span></span>광명5동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind05" name="">
+                                                    <label for="districtFind05"><span></span>광명5동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind06" name="">
-											<label for="districtFind06"><span></span>광명6동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind06" name="">
+                                                    <label for="districtFind06"><span></span>광명6동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind07" name="">
-											<label for="districtFind07"><span></span>광명7동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind07" name="">
+                                                    <label for="districtFind07"><span></span>광명7동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind08" name="">
-											<label for="districtFind08"><span></span>소하1동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind08" name="">
+                                                    <label for="districtFind08"><span></span>소하1동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind09" name="">
-											<label for="districtFind09"><span></span>소하2동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind09" name="">
+                                                    <label for="districtFind09"><span></span>소하2동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind10" name="">
-											<label for="districtFind10"><span></span>철산1동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind10" name="">
+                                                    <label for="districtFind10"><span></span>철산1동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind11" name="">
-											<label for="districtFind11"><span></span>철산2동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind11" name="">
+                                                    <label for="districtFind11"><span></span>철산2동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind12" name="">
-											<label for="districtFind12"><span></span>철산3동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind12" name="">
+                                                    <label for="districtFind12"><span></span>철산3동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind13" name="">
-											<label for="districtFind13"><span></span>철산4동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind13" name="">
+                                                    <label for="districtFind13"><span></span>철산4동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind14" name="">
-											<label for="districtFind14"><span></span>하안1동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind14" name="">
+                                                    <label for="districtFind14"><span></span>하안1동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind15" name="">
-											<label for="districtFind15"><span></span>하안2동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind15" name="">
+                                                    <label for="districtFind15"><span></span>하안2동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind16" name="">
-											<label for="districtFind16"><span></span>하안3동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind16" name="">
+                                                    <label for="districtFind16"><span></span>하안3동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind17" name="">
-											<label for="districtFind17"><span></span>하안4동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind17" name="">
+                                                    <label for="districtFind17"><span></span>하안4동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind18" name="">
-											<label for="districtFind18"><span></span>학온동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind18" name="">
+                                                    <label for="districtFind18"><span></span>학온동</label>
+                                                </span>
                                     </li>
                                 </ul>
                             </div>
                         </dd>
                     </dl>
-                    <dl class="dateSet">
+                    <dl class="date_set">
                         <dt>발생 기간</dt>
-                        <dd><input type="text"  id="startDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
+                        <dd><input type="date"  id="startDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
                         <span>부터</span>
-                        <dd><input type="text" id="endDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
+                        <dd><input type="date" id="endDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
                         <span>까지</span>
                     </dl>
-                    <dl class="searchTextSet">
+                    <dl class="search_text_set">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
                          <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
@@ -191,14 +191,14 @@
                 </div>
             </form>
         </article>
-        <article class="searchList">
-            <div class="articleTitle">
+        <article class="search_list">
+            <div class="article_title">
                 <dl class="title">
                     <dt>시설물 장애 이벤트 목록</dt>
                     <dd><span class="count">123</span>건</dd>
                 </dl>
                 <div>
-                    <ul class="statusLabel">
+                    <ul class="status_label">
                         <li><span class="red"></span>미처리 : 5</li>
                         <li><span class="yellow"></span>조치 완료 : 3</li>
                         <li><span class="green"></span>이벤트 종료 : 14</li>
@@ -208,7 +208,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="searchTable">
+            <div class="search_table">
                 <table id="troubleEventTable">
                     <thead>
                     <tr>
