--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -8,64 +8,64 @@
         <i><img src="/images/default/settingArrowNext.svg"></i>
         <span>개소 관리</span>
     </h4>
-    <section class="inquiryContent">
-        <article class="search-form" id="searchForm">
+    <section class="inquiry_content">
+        <article class="search_form" id="searchForm">
             <h6>개소 검색</h6>
             <form>
                 <div>
-                    <dl class="selectboxSet">
+                    <dl class="selectbox_set">
                         <dt>개소 종류</dt>
-                        <dd class="dropdown_checkbox">
-                            <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">개소 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list">
+                        <dd>
+                            <div class="dropdown_checkbox">
+                                <p class="checkbox_title checkbox_title_station select">개소 종류 선택</p>
+                                <ul class="checkbox_list checkbox_list_station list">
                                     <li>
-										<span>
-											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
-											<label for="checkAll"><span></span>전체</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="stationAll" name="">
+                                                    <label for="stationAll"><span></span>전체</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="station01" name="">
-											<label for="station01"><span></span>스마트 버스 정류장</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="station01" name="">
+                                                    <label for="station01"><span></span>스마트 버스 정류장</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="station02" name="">
-											<label for="station02"><span></span>스마트 가로등</label>
-										</span>
+                                                    <input type="checkbox" id="station02" name="">
+                                                    <label for="station02"><span></span>스마트 가로등</label>
+                                                </span>
                                     </li>
                                 </ul>
                             </div>
                         </dd>
                     </dl>
-                    <dl class="selectboxSet">
+                    <dl class="selectbox_set">
                         <dt>시설물 종류</dt>
-                        <dd class="dropdown_checkbox">
-                            <div class="box">
-                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list">
+                        <dd>
+                            <div class="dropdown_checkbox">
+                                <p class="checkbox_title checkbox_title_station_find select">시설물 종류 선택</p>
+                                <ul class="checkbox_list checkbox_list_station_find list">
                                     <li>
-										<span>
-											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
-											<label for="checkAll"><span></span>전체</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="stationAll" name="">
+                                                    <label for="stationAll"><span></span>전체</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="station01" name="">
-											<label for="station01"><span></span>AED</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="station01" name="">
+                                                    <label for="station01"><span></span>AED</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="station02" name="">
-											<label for="station02"><span></span>기타</label>
-										</span>
+                                                    <input type="checkbox" id="station02" name="">
+                                                    <label for="station02"><span></span>기타</label>
+                                                </span>
                                     </li>
                                 </ul>
                             </div>
                         </dd>
                     </dl>
-                    <dl class="checkboxSet">
+                    <dl class="checkbox_set">
                         <dt>처리 상태</dt>
                         <dd>
 							<span>
@@ -80,113 +80,113 @@
                     </dl>
                 </div>
                 <div>
-                    <dl class="selectboxSet">
+                    <dl class="selectbox_set">
                         <dt>행정구역</dt>
-                        <dd class="dropdown_checkbox">
-                            <div class="box">
+                        <dd>
+                            <div class="dropdown_checkbox">
                                 <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
-										<span>
-											<input type="checkbox"  id="checkAll" name="" data-init-value="true">
-											<label for="checkAll"><span></span>전체</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtALL" name="">
+                                                    <label for="districtALL"><span></span>전체</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind01" name="">
-											<label for="districtFind01"><span></span>광명1동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind01" name="">
+                                                    <label for="districtFind01"><span></span>광명1동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind02" name="">
-											<label for="districtFind02"><span></span>광명2동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind02" name="">
+                                                    <label for="districtFind02"><span></span>광명2동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind03" name="">
-											<label for="districtFind03"><span></span>광명3동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind03" name="">
+                                                    <label for="districtFind03"><span></span>광명3동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind04" name="">
-											<label for="districtFind04"><span></span>광명4동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind04" name="">
+                                                    <label for="districtFind04"><span></span>광명4동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind05" name="">
-											<label for="districtFind05"><span></span>광명5동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind05" name="">
+                                                    <label for="districtFind05"><span></span>광명5동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind06" name="">
-											<label for="districtFind06"><span></span>광명6동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind06" name="">
+                                                    <label for="districtFind06"><span></span>광명6동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind07" name="">
-											<label for="districtFind07"><span></span>광명7동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind07" name="">
+                                                    <label for="districtFind07"><span></span>광명7동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind08" name="">
-											<label for="districtFind08"><span></span>소하1동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind08" name="">
+                                                    <label for="districtFind08"><span></span>소하1동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind09" name="">
-											<label for="districtFind09"><span></span>소하2동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind09" name="">
+                                                    <label for="districtFind09"><span></span>소하2동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind10" name="">
-											<label for="districtFind10"><span></span>철산1동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind10" name="">
+                                                    <label for="districtFind10"><span></span>철산1동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind11" name="">
-											<label for="districtFind11"><span></span>철산2동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind11" name="">
+                                                    <label for="districtFind11"><span></span>철산2동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind12" name="">
-											<label for="districtFind12"><span></span>철산3동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind12" name="">
+                                                    <label for="districtFind12"><span></span>철산3동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind13" name="">
-											<label for="districtFind13"><span></span>철산4동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind13" name="">
+                                                    <label for="districtFind13"><span></span>철산4동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind14" name="">
-											<label for="districtFind14"><span></span>하안1동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind14" name="">
+                                                    <label for="districtFind14"><span></span>하안1동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind15" name="">
-											<label for="districtFind15"><span></span>하안2동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind15" name="">
+                                                    <label for="districtFind15"><span></span>하안2동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind16" name="">
-											<label for="districtFind16"><span></span>하안3동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind16" name="">
+                                                    <label for="districtFind16"><span></span>하안3동</label>
+                                                </span>
                                     </li>
                                     <li>
-										<span>
-											<input type="checkbox" id="districtFind17" name="">
-											<label for="districtFind17"><span></span>하안4동</label>
-										</span>
+                                                <span>
+                                                    <input type="checkbox" id="districtFind17" name="">
+                                                    <label for="districtFind17"><span></span>하안4동</label>
+                                                </span>
                                         <span>
-											<input type="checkbox" id="districtFind18" name="">
-											<label for="districtFind18"><span></span>학온동</label>
-										</span>
+                                                    <input type="checkbox" id="districtFind18" name="">
+                                                    <label for="districtFind18"><span></span>학온동</label>
+                                                </span>
                                     </li>
                                 </ul>
                             </div>
                         </dd>
                     </dl>
-                    <dl class="searchTextSet">
+                    <dl class="search_text_set">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
                         <dd class="button"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
@@ -194,14 +194,14 @@
                 </div>
             </form>
         </article>
-        <article class="searchList">
-            <div class="articleTitle">
+        <article class="search_list">
+            <div class="article_title">
                 <dl class="title">
                     <dt>개소 목록</dt>
                     <dd><span class="count">123</span>건</dd>
                 </dl>
                 <div>
-                    <ul class="statusLabel">
+                    <ul class="status_label">
                         <li><span class="gray"></span>비활성 : 5</li>
                         <li><span class="red"></span>이상 : 3</li>
                         <li><span class="green"></span>정상 : 14</li>
@@ -211,7 +211,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="searchTable">
+            <div class="search_table">
                 <table>
                     <thead>
                     <tr>
