--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -4,13 +4,13 @@
 .wrap{width: 100%; height: 100%;}
 
 /* mapLocation */
-.mapLocation{position: absolute; top: 10px; left: 330px; display: flex; align-items: center; justify-content: space-around; width: 331px; height: 40px; box-sizing: border-box; background: #1a1b1d; border-radius: 4px;}
-.mapLocation ul{display: flex; align-items: center; justify-content: center; flex: 1; column-gap: 4px; height: 100%; padding: 0px 14px; text-align: center; border-right: 1px solid #292c34; box-sizing: border-box;}
-.mapLocation ul li{flex: 1; display: flex; justify-content: flex-start; column-gap: 8px; font-size: 14px; color: #c8cbd1;}
-.mapLocation ul li:nth-last-child(1){flex: initial;}
-.mapLocation ul li i{width: 16px; height: 16px; margin: 0px;}
-.mapLocation ul li i img{height: 100%; margin: auto;}
-.mapLocation p{padding: 0px 14px;}
+.map_location{position: absolute; top: 10px; left: 330px; display: flex; align-items: center; justify-content: space-around; width: 331px; height: 40px; box-sizing: border-box; background: #1a1b1d; border-radius: 4px;}
+.map_location ul{display: flex; align-items: center; justify-content: center; flex: 1; column-gap: 4px; height: 100%; padding: 0px 14px; text-align: center; border-right: 1px solid #292c34; box-sizing: border-box;}
+.map_location ul li{flex: 1; display: flex; justify-content: flex-start; column-gap: 8px; font-size: 14px; color: #c8cbd1;}
+.map_location ul li:nth-last-child(1){flex: initial;}
+.map_location ul li i{width: 16px; height: 16px; margin: 0px;}
+.map_location ul li i img{height: 100%; margin: auto;}
+.map_location p{Padding: 0px 14px;}
 
 /* lnb tabButton */
 .lnb .tab_button{display: flex; align-items: center; justify-content: space-between; width: 100%; height: 40px; padding: 0px 14px; box-sizing: border-box; background: #23252b;}
@@ -288,7 +288,7 @@
 .inquiry_content{overflow: hidden; flex: 1; display: flex; flex-direction: column; grid-gap: 14px; padding: 26px;}
 .inquiry_content article{padding: 26px; border-radius: 10px; background: #1a1b1d;}
 .inquiry_content article h6{font-size: 16px; color: #dee0e4;}
-.inquiry_content article.searchList{flex: 1; display: flex; flex-direction: column; overflow: hidden;}
+.inquiry_content article.search_list{flex: 1; display: flex; flex-direction: column; overflow: hidden;}
 
 /* articleTitle */
 .article_title div{flex: 1; display: flex; align-items: center; justify-content: flex-end; grid-gap: 30px;}
